--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.21.6
-pandas==1.3.5
-plotly==5.13.0
-streamlit==1.20.0
+gspread==5.10.0
+matplotlib==3.6.3
+numpy==1.24.2
 openpyxl==3.1.0
-matplotlib==3.5.3
+pandas==1.5.3
+plotly==5.13.0
+scikit_learn==1.3.0
+streamlit==1.24.1
